# nova-client

./: .gitignore  README.md  build.bat  build.sh  index.html  package-lock.json  package.bat  package.json  package.sh  tmp_extract_model_merge.ps1  tmp_search_model_merge.js  tsconfig.json  vite.config.ts
.cargo/: config.toml
.codegraph/: daemon.pid
docs/: alkaid.md  cluecard-paper-trail-design.md  embedding-server.md  github-actions.md  headless-server.md  御书房-AI内阁协作设计.md  御书房-Mind心智系统设计.md  御书房-数字员工设计.md  御书房-项目简介.md  项目架构总览.md
scripts/: alkaid-bridge.mjs  alkaid-config.mjs  alkaid-core.mjs  alkaid-slim-memory.mjs  alkaid-smart-edit.mjs  alkaid.mjs  alkaid.test.mjs  claude-bridge.mjs  claude-bridge.test.mjs  codebuddy-bridge.mjs  codebuddy-bridge.test.mjs  codex-bridge.mjs  package.py  (+9 more)
src-tauri/: Cargo.toml  build.rs  cursor-windows-hide.cjs  tauri.conf.json  windows-shell-shim.rs
src-tauri/icons/: icon.icns
src-tauri/resources/: codebuddy-bridge.cjs  opencode-bridge.cjs
src-tauri/src/: acp.rs  agent_config.rs  cli.rs  cli_manager.rs  clues.rs  codex.rs  codex_radar.rs  codex_sdk.rs  credential_roaming.rs  employees.rs  gitwt.rs  lib.rs  main.rs  marks.rs  mind.rs  model_cache.rs  notice.rs  nowindow.rs  opencode_sdk.rs  path_env.rs  pxpipe.rs  quota.rs  relay.rs  remote.rs  sdk_runtime.rs  semantic.rs  server.rs  settings.rs  signature.rs  skills.rs  sleep_inhibitor.rs  sys_notify.rs  threads.rs  time_machine.rs  tool_api.rs  updater.rs  windows_shell_shim.rs
src-tauri/src/sdk_adapters/: alkaid.rs  claude.rs  codebuddy.rs  codex.rs  cursor.rs  mod.rs
(+59 files in other folders)
